[gd_scene load_steps=5 format=2]

[ext_resource path="res://sounds/pickup_coin.wav" type="AudioStream" id=1]
[ext_resource path="res://sounds/mixer.gd" type="Script" id=2]
[ext_resource path="res://sounds/arrow_shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/arrow_hit.wav" type="AudioStream" id=4]

[node name="mixer" type="Node"]
script = ExtResource( 2 )

[node name="pickup_coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="arrow_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="arrow_hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
